# Barcode-GPhoto

./: Dockerfile  README.md  docker-compose.yml  main.py  notes.txt  pyproject.toml
