[tool.poetry]
name = "barcode-gphoto"
version = "0.1.0"
description = ""
authors = ["Dawid Weglarz <dawid.weglarz95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gphoto2 = "^2.5.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
